load("@rules_cc//cc:defs.bzl", "cc_import")

cc_import(
    name = "libv8_base_mac",
    static_library = "//libv8_mac:libv8_base.a",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "libv8_init_mac",
    static_library = "//libv8_mac:libv8_init.a",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "libv8_initializers_mac",
    static_library = "//libv8_mac:libv8_initializers.a",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "libv8_libbase_mac",
    static_library = "//libv8_mac:libv8_libbase.a",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "libv8_libplatform_mac",
    static_library = "//libv8_mac:libv8_libplatform.a",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "libv8_libsampler_mac",
    static_library = "//libv8_mac:libv8_libsampler.a",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "libv8_nosnapshot_mac",
    static_library = "//libv8_mac:libv8_nosnapshot.a",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "libv8_snapshot_mac",
    static_library = "//libv8_mac:libv8_snapshot.a",
    visibility = ["//visibility:public"],
)
